opam-version: "2.0"
name: "snapcamel"
version: "0.1.0"
synopsis: "A simple photo journal application built with OCaml and Dream"
description: """
SnapCamel is a photo journal application built using OCaml, Dream web framework,
HTMX, and PicoCSS.
"""
maintainer: "mwksl <matthewstingel@fastmail.com>"
authors: "mwksl <matthewstingel@fastmail.com>"
license: "MIT"
homepage: "https://github.com/mwksl/snapcamel"
dev-repo: "git+https://github.com/mwksl/snapcamel.git"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "base" {>= "v0.14.0"}
  "stdio" {>= "v0.14.0"}
  "lwt"
  "lwt_unix"
  "dream" {>= "1.0.0~alpha2"}
  "cohttp-lwt-unix"
  "sqlite3"
  "mustache"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
